--- a/app/src/main/res/layout/fragment_item_list_dialog_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_item_list_dialog_list_dialog.xml
@@ -77,6 +77,7 @@
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="card to bank transfer"
+                android:textColor="@color/black"
                 android:textSize="12sp" />
 
             <TextView
@@ -114,9 +115,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
+                android:textColor="@color/black"
                 android:fontFamily="@font/poppins_medium"
                 android:text="@string/select_payment_method"
                 android:textSize="12sp" />
+
+            <com.stripe.android.view.CardMultilineWidget
+                android:id="@+id/cardInputWidget"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:shouldShowPostalCode="false" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/card_recycler"
@@ -130,6 +139,20 @@
                 android:textSize="14sp"
                 tools:itemCount="2"
                 tools:listitem="@layout/fragment_item_list_dialog_list_dialog_item" />
+
+            <TextView
+                android:id="@+id/addNewCard"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/poppins_medium"
+                android:gravity="center"
+                android:text="add new card"
+                android:textColor="@color/colorMain"
+                android:textSize="12sp" />
+
 
         </LinearLayout>
 
@@ -176,6 +199,7 @@
             </LinearLayout>
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/payButtonSheet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
