--- a/app/src/main/res/layout/notice_itemlist.xml
+++ b/app/src/main/res/layout/notice_itemlist.xml
@@ -9,18 +9,18 @@
     app:cardElevation="0dp">
 
     <LinearLayout
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:background="@drawable/radius_background_card"
-        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:background="@drawable/radius_background_card"
+        android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -32,13 +32,15 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/bankname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="HDFC INDIAN OIL" />
+                    android:text="HDFC INDIAN OIL"
+                    android:textColor="@color/black" />
 
                 <TextView
+                    android:id="@+id/last_digit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="bottom"
@@ -60,6 +62,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/bank_logo"
                     android:layout_width="119dp"
                     android:layout_height="20dp"
                     android:layout_gravity="end"
@@ -68,26 +71,36 @@
                     android:src="@drawable/hdfc" />
             </LinearLayout>
 
+            <com.stripe.android.view.CardMultilineWidget
+                android:id="@+id/cardInputWidget"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:shouldShowPostalCode="false" />
         </LinearLayout>
+
         <ImageView
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/card_chip_"
-            android:layout_gravity="start"/>
+            android:layout_gravity="start"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/card_chip_" />
+
         <LinearLayout
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
+
             <TextView
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/poppins_semibold"
-                android:text="Gopal Meena" />
+                android:text="Gopal Meena"
+                android:textColor="@color/black" />
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -97,12 +110,12 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:foreground="?attr/selectableItemBackgroundBorderless"
-                    android:background="@drawable/button_shape_ig2"
-                    android:text="Pay Now"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_gravity="top|end" />
+                    android:layout_gravity="top|end"
+                    android:background="@drawable/button_shape_ig2"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:text="Pay Now" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
