profile fragment added

--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -122,6 +122,7 @@
                     android:orientation="vertical">
 
                     <LinearLayout
+                        android:id="@+id/message_at_home"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
                         android:layout_gravity="center"
