--- a/app/src/main/res/layout/fragment_add_card.xml
+++ b/app/src/main/res/layout/fragment_add_card.xml
@@ -218,7 +218,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/addBank"
+                        android:id="@+id/addNewCard"
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_gravity="center"
