--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:background="@color/limeWhite"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
-    tools:context=".UI.UserProfile">
+    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
