--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -2,220 +2,243 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:overScrollMode="never"
-    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/limeWhite"
+    android:overScrollMode="never"
+    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
     tools:context=".UI.BankDetails">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <LinearLayout
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentTop="true"
             android:id="@+id/headingLayout"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/backButton"
-                android:layout_weight="1"
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="BACK"
-                android:drawablePadding="5dp"
                 android:layout_gravity="center"
-                android:gravity="center|start"
-                android:textStyle="bold"
-                android:textSize="15sp"
                 android:layout_marginStart="0dp"
+                android:layout_weight="1"
+                android:drawablePadding="5dp"
+                android:gravity="center|start"
+                android:text="BACK"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold"
                 app:drawableLeftCompat="@drawable/ic_op_left"
                 app:drawableTint="@color/black" />
         </LinearLayout>
+
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/home_activity_shape_all"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="0dp"
-                android:src="@drawable/ic_wbank1"/>
+                android:src="@drawable/ic_wbank1" />
         </LinearLayout>
+
         <LinearLayout
-            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="20dp"
             android:background="@drawable/custom_btn_shape_active"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp">
+            android:visibility="visible">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins"
                 android:text="@string/bank_verification_success"
-                android:textStyle="bold"
-                android:fontFamily="@font/poppins"
+                android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textColor="@color/black"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/congrats_your_account_is_verified_succesfully_and_all_future_payout_will_be_credited_to_your_bank_account"
                 android:fontFamily="@font/poppins"
+                android:text="@string/congrats_your_account_is_verified_succesfully_and_all_future_payout_will_be_credited_to_your_bank_account"
                 android:textSize="13sp" />
 
         </LinearLayout>
+
         <LinearLayout
-            android:visibility="gone"
-            android:background="@drawable/pending_shape"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp">
+            android:background="@drawable/pending_shape"
+            android:orientation="vertical"
+            android:visibility="gone">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins"
                 android:text="Verification Pending"
-                android:textStyle="bold"
-                android:fontFamily="@font/poppins"
+                android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textColor="@color/black"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/pendinfg_bank"
                 android:fontFamily="@font/poppins"
+                android:text="@string/pendinfg_bank"
                 android:textSize="13sp" />
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/userDetails"
-            android:foreground="?attr/selectableItemBackgroundBorderless"
-            android:orientation="horizontal"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/home_activity_shape_all"
             android:layout_width="match_parent"
-            android:layout_height="75dp">
+            android:layout_height="75dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/home_activity_shape_all"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:orientation="horizontal">
+
             <com.google.android.material.textfield.TextInputLayout
-                android:padding="0dp"
+                android:id="@+id/nameProfile"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="start"
-                app:startIconDrawable="@drawable/ic_op_name"
+                android:hint="Name"
+                android:padding="0dp"
                 app:boxStrokeColor="@color/black"
                 app:boxStrokeWidth="0.5dp"
                 app:boxStrokeWidthFocused="0.5dp"
                 app:hintTextColor="@color/black"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:id="@+id/nameProfile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Name">
+                app:startIconDrawable="@drawable/ic_op_name">
+
                 <com.google.android.material.textfield.TextInputEditText
-                    android:layout_marginTop="2dp"
-                    android:gravity="center|start"
-                    android:layout_gravity="center"
-                    android:drawablePadding="0dp"
                     android:id="@+id/bankName"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="2dp"
+                    android:drawablePadding="0dp"
+                    android:gravity="center|start" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/userDOBLayout"
-            android:foreground="?attr/selectableItemBackgroundBorderless"
-            android:orientation="horizontal"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/home_activity_shape_all"
             android:layout_width="match_parent"
-            android:layout_height="75dp">
+            android:layout_height="75dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/home_activity_shape_all"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:orientation="horizontal">
+
             <com.google.android.material.textfield.TextInputLayout
-                app:startIconDrawable="@drawable/op_bank2"
+                android:id="@+id/userDOBBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Account Number"
                 app:boxStrokeColor="@color/black"
                 app:boxStrokeWidth="0.5dp"
                 app:boxStrokeWidthFocused="0.5dp"
                 app:hintTextColor="@color/black"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:id="@+id/userDOBBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Account Number">
+                app:startIconDrawable="@drawable/op_bank2">
+
                 <com.google.android.material.textfield.TextInputEditText
-                    android:maxLength="18"
-                    android:inputType="numberSigned"
                     android:id="@+id/bankAc"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    android:inputType="numberSigned"
+                    android:maxLength="18" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/userMobileLayout"
-            android:foreground="?attr/selectableItemBackgroundBorderless"
-            android:orientation="horizontal"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/home_activity_shape_all"
             android:layout_width="match_parent"
-            android:layout_height="75dp">
+            android:layout_height="75dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/home_activity_shape_all"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:orientation="horizontal">
+
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/userMobileBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="IFSC Code"
                 app:boxStrokeColor="@color/black"
                 app:boxStrokeWidth="0.5dp"
                 app:boxStrokeWidthFocused="0.5dp"
                 app:hintTextColor="@color/black"
-                app:startIconDrawable="@drawable/ic_op_ifsc"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:id="@+id/userMobileBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="IFSC Code">
+                app:startIconDrawable="@drawable/ic_op_ifsc">
+
                 <com.google.android.material.textfield.TextInputEditText
-                    android:maxLength="11"
                     android:id="@+id/bankIFSC"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    android:maxLength="11" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <Button
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:id="@+id/bankSubmit"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:textColor="@color/white"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/button_shape_primary"
-                android:text="Submit" />
+                android:text="Submit"
+                android:textColor="@color/white" />
+
             <include
-                android:visibility="gone"
                 android:id="@+id/customBtn"
-                android:layout_margin="10dp"
+                layout="@layout/custombtn"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                layout="@layout/custombtn"/>
+                android:layout_margin="10dp"
+                android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
 
