--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".kotlin.UI.SignInActivity">
+    android:background="@color/limeWhite"
+    android:layout_gravity="center"
+    android:gravity="center"
+    tools:context=".kotlin.UI.SplashV2">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_gravity="center"
+        android:id="@+id/animationView"
+        android:layout_width="180dp"
+        android:paddingBottom="@dimen/dimen_20dp"
+        android:layout_height="180dp"
+        app:lottie_speed="1.3"
+        app:lottie_rawRes="@raw/cash"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
+
+</androidx.appcompat.widget.LinearLayoutCompat>
