--- a/app/src/main/res/layout/notice_itemlist.xml
+++ b/app/src/main/res/layout/notice_itemlist.xml
@@ -110,6 +110,7 @@
                 android:orientation="vertical">
 
                 <Button
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="top|end"
