--- a/app/src/main/res/layout/fragment_add_card.xml
+++ b/app/src/main/res/layout/fragment_add_card.xml
@@ -52,6 +52,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_gravity="center"
@@ -63,7 +64,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
                         android:orientation="horizontal">
 
                         <LinearLayout
@@ -129,7 +129,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_gravity="center"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="0dp"
                             android:gravity="start"
                             android:hint="Card number"
                             android:padding="0dp"
@@ -148,69 +148,100 @@
                                 android:gravity="center|start"
                                 android:inputType="numberDecimal"
                                 android:maxLength="16" />
+
                         </com.google.android.material.textfield.TextInputLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                                android:layout_width="match_parent"
+                                android:layout_weight="1"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="0dp"
+                                android:gravity="start"
+                                android:hint="MM"
+                                android:padding="0dp"
+                                app:boxStrokeColor="@color/black"
+                                app:boxStrokeWidth="1dp"
+                                app:boxStrokeWidthFocused="0.5dp"
+                                app:hintTextColor="@color/black">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:drawablePadding="0dp"
+                                    android:gravity="center|start"
+                                    android:inputType="numberDecimal"
+                                    android:maxLength="2" />
+
+                            </com.google.android.material.textfield.TextInputLayout>
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                                android:layout_width="match_parent"
+                                android:layout_weight="1"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="0dp"
+                                android:layout_marginStart="@dimen/dimen_5dp"
+                                android:layout_marginEnd="@dimen/dimen_5dp"
+                                android:gravity="start"
+                                android:hint="YY"
+                                android:padding="0dp"
+                                app:boxStrokeColor="@color/black"
+                                app:boxStrokeWidth="1dp"
+                                app:boxStrokeWidthFocused="0.5dp"
+                                app:hintTextColor="@color/black">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:drawablePadding="0dp"
+                                    android:gravity="center|start"
+                                    android:inputType="numberDecimal"
+                                    android:maxLength="2" />
+
+                            </com.google.android.material.textfield.TextInputLayout>
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                                android:layout_width="match_parent"
+                                android:layout_weight="1"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="0dp"
+                                android:gravity="start"
+                                android:hint="CVV"
+                                android:padding="0dp"
+                                app:boxStrokeColor="@color/black"
+                                app:boxStrokeWidth="1dp"
+                                app:boxStrokeWidthFocused="0.5dp"
+                                app:hintTextColor="@color/black">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:drawablePadding="0dp"
+                                    android:gravity="center|start"
+                                    android:inputType="numberDecimal"
+                                    android:maxLength="3" />
+
+                            </com.google.android.material.textfield.TextInputLayout>
+
+
+
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="vertical"
-                    android:visibility="visible">
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
-                        android:gravity="start"
-                        android:hint="Card holder"
-                        android:padding="0dp"
-                        app:boxStrokeColor="@color/black"
-                        app:boxStrokeWidth="0.5dp"
-                        app:boxStrokeWidthFocused="0.5dp"
-                        app:hintTextColor="@color/black"
-                        app:startIconDrawable="@drawable/ic_op_name">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/holderName"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:drawablePadding="0dp"
-                            android:gravity="center|start"
-                            android:inputType="textPersonName" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:gravity="start"
-                        android:hint="Registered Number"
-                        android:padding="0dp"
-                        app:boxStrokeColor="@color/black"
-                        app:boxStrokeWidth="0.5dp"
-                        app:boxStrokeWidthFocused="0.5dp"
-                        app:hintTextColor="@color/black"
-                        app:startIconDrawable="@drawable/ic_op_phone">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/bankname"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:drawablePadding="0dp"
-                            android:gravity="center|start"
-                            android:inputType="numberDecimal" />
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -222,11 +253,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_gravity="center"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Add Card" />
+                        android:text="add card"
+                        android:textAllCaps="false" />
 
                 </LinearLayout>
             </LinearLayout>
