--- a/app/src/main/res/layout/fragment_create_user.xml
+++ b/app/src/main/res/layout/fragment_create_user.xml
@@ -205,6 +205,7 @@
                 </LinearLayout>
 
                 <Button
+                    android:textAllCaps="false"
                     android:id="@+id/nextButton"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
