--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -3,15 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:overScrollMode="never"
-    android:scrollbars="none"
-    android:fitsSystemWindows="true"
     android:layout_height="match_parent"
-    android:background="@color/limeWhite">
+    android:background="@color/limeWhite"
+    android:fitsSystemWindows="true"
+    android:overScrollMode="never"
+    android:scrollbars="none">
+
     <RelativeLayout
         android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <RelativeLayout
             android:id="@+id/headingLayout"
             android:layout_width="match_parent"
@@ -21,38 +23,41 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <TextView
-                    android:visibility="invisible"
-                    android:textAllCaps="true"
-                    android:textStyle="bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/loginskip"
-                    android:textColor="#000000"
                     android:layout_gravity="right"
                     android:gravity="right"
-                    android:padding="20dp"/>
+                    android:padding="20dp"
+                    android:text="@string/loginskip"
+                    android:textAllCaps="true"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:visibility="invisible" />
             </LinearLayout>
         </RelativeLayout>
+
         <RelativeLayout
             android:id="@+id/vectorImage"
-            android:layout_below="@id/headingLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/headingLayout">
             <!--    vector image edit here-->
             <LinearLayout
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center">
+                android:gravity="center"
+                android:visibility="gone">
+
                 <ImageView
-                    android:padding="30dp"
-                    android:layout_margin="20dp"
-                    android:layout_weight="1"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
                     android:layout_gravity="center"
+                    android:layout_margin="20dp"
+                    android:layout_weight="1"
+                    android:padding="30dp"
                     android:src="@drawable/m_insert" />
             </LinearLayout>
         </RelativeLayout>
@@ -84,43 +89,47 @@
                     android:layout_marginTop="20dp"
                     android:text="@string/enter_your_mobile_number_to_login_or_signup"
                     android:textStyle="normal" />
+
                 <LinearLayout
-                    android:layout_margin="20dp"
-                    android:background="@drawable/radius_background_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:background="@drawable/radius_background_input"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
                         android:drawablePadding="10dp"
                         android:gravity="center|start"
-                        android:text="+91"
-                        android:textColor="@color/black"
-
                         android:maxLength="10"
                         android:padding="10dp"
+
+                        android:text="+91"
+                        android:textColor="@color/black"
                         android:textSize="17sp"
                         app:drawableStartCompat="@drawable/ic_wflag" />
+
                     <View
                         android:layout_width="0.5dp"
                         android:layout_height="match_parent"
-                        android:background="@color/greyish"/>
+                        android:background="@color/greyish" />
 
                     <EditText
-                        android:background="@drawable/input_shape"
                         android:id="@+id/mobileText"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:paddingStart="10dp"
+                        android:background="@drawable/input_shape"
                         android:drawablePadding="10dp"
                         android:gravity="center|start"
                         android:hint="@string/login_mobile_hint"
                         android:inputType="numberDecimal"
                         android:maxLength="10"
                         android:padding="10dp"
+                        android:paddingStart="10dp"
                         android:textSize="17sp" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -148,6 +157,7 @@
                         android:textColor="#000000" />
 
                 </LinearLayout>
+
                 <Button
                     android:id="@+id/send_otp_button"
                     android:layout_width="match_parent"
@@ -155,9 +165,10 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-                    android:textColor="@color/white"
                     android:background="@drawable/button_shape_primary"
-                    android:text="@string/send_otp_button_text" />
+                    android:text="@string/send_otp_button_text"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white" />
             </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
