--- a/app/src/main/res/layout/t_list.xml
+++ b/app/src/main/res/layout/t_list.xml
@@ -55,7 +55,7 @@
                     android:id="@+id/Tdate"
                     android:gravity="start"
                     android:layout_gravity="start"
-                    android:layout_width="50dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2000"/>
             </LinearLayout>
